Extracted transformation code for panel

--- a/MpegCompressor/MpegCompressor.csproj
+++ b/MpegCompressor/MpegCompressor.csproj
@@ -104,6 +104,9 @@
     <Compile Include="Subsample.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="TransformPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Viewport.cs">
       <SubType>Component</SubType>
     </Compile>
