basic merge node

--- a/MpegCompressor/MpegCompressor.csproj
+++ b/MpegCompressor/MpegCompressor.csproj
@@ -71,6 +71,7 @@
     <Compile Include="nodes\DCT.cs" />
     <Compile Include="IProperties.cs" />
     <Compile Include="IViewable.cs" />
+    <Compile Include="nodes\Merge.cs" />
     <Compile Include="nodes\MoVec.cs" />
     <Compile Include="nodes\Node.cs" />
     <Compile Include="NodeView.cs">
