MoVec uses all 3 channels now and saves data

--- a/MpegCompressor/MpegCompressor.csproj
+++ b/MpegCompressor/MpegCompressor.csproj
@@ -73,7 +73,8 @@
     <Compile Include="IViewable.cs" />
     <Compile Include="nodes\Merge.cs" />
     <Compile Include="nodes\Mix.cs" />
-    <Compile Include="nodes\MoVec.cs" />
+    <Compile Include="nodes\MoVecDecompose.cs" />
+    <Compile Include="nodes\MoVecCompose.cs" />
     <Compile Include="nodes\Node.cs" />
     <Compile Include="NodeView.cs">
       <SubType>Component</SubType>
