--- a/MpegCompressor/MpegCompressor.csproj
+++ b/MpegCompressor/MpegCompressor.csproj
@@ -76,8 +76,10 @@
     <Compile Include="Nodes\MoVecDecompose.cs" />
     <Compile Include="Nodes\MoVecCompose.cs" />
     <Compile Include="Nodes\Node.cs" />
-    <Compile Include="Nodes\ReadMultiChannel.cs" />
-    <Compile Include="Nodes\WriteMultiChannel.cs" />
+    <Compile Include="Nodes\ReadMulti2Channel.cs" />
+    <Compile Include="Nodes\ReadMulti3Channel.cs" />
+    <Compile Include="Nodes\WriteMulti2Channel.cs" />
+    <Compile Include="Nodes\WriteMulti3Channel.cs" />
     <Compile Include="NodeView.cs">
       <SubType>Component</SubType>
     </Compile>
