in progress conversion to NodeArtist

--- a/MpegCompressor/MpegCompressor.csproj
+++ b/MpegCompressor/MpegCompressor.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NodeArtist.cs" />
     <Compile Include="Nodes\ChannelNode.cs" />
     <Compile Include="Nodes\ChannelsToColor.cs" />
     <Compile Include="Chunker.cs" />
