--- a/MpegCompressor/MpegCompressor.csproj
+++ b/MpegCompressor/MpegCompressor.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Nodes\DCT.cs" />
     <Compile Include="IProperties.cs" />
     <Compile Include="IViewable.cs" />
+    <Compile Include="Nodes\Grade.cs" />
     <Compile Include="Nodes\Merge.cs" />
     <Compile Include="Nodes\Mix.cs" />
     <Compile Include="Nodes\MoVecDecompose.cs" />
